feat : data init 추가 및 seller페이지 여러 버그 fix / 영욱